--- a/SpringDemoBot/src/main/resources/application.properties
+++ b/SpringDemoBot/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 bot.name=casino_dealer_bot
-bot.token=5735612181:AAGWqkbVCexsiX7mEeHwZPPPxvz1xn5KM30
+bot.token=5735612181:AAF3YFImwNJemoau1dnuUHEYRxJZCUhvqL8
+
+
+
+#Db setting
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/bot_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.mvc.hiddenmethod.filter.enabled=true
